--- a/src/PokemonList/PokemonList.css
+++ b/src/PokemonList/PokemonList.css
@@ -1,5 +1,5 @@
 .pokemonList{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     /* max-width: 30%; */
 }
