--- a/src/Controls/Controls.css
+++ b/src/Controls/Controls.css
@@ -1,5 +1,15 @@
 .controls{
     display: flex;
     flex-direction: row;
+    width: 100%;
     border: solid green 0.25rem;
+}
+
+.filterDiv{
+    width: 70%;
+}
+
+.searchDiv {
+    height: 100%;
+    width: 30%;
 }
