--- a/src/Forms/SearchForm.css
+++ b/src/Forms/SearchForm.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     border: solid blue 0.25rem;
+    height: 100%;
 }
 
 .inputDiv{
@@ -12,7 +13,7 @@
 }
 
 button{
-    margin: 10.5%;
+    margin: 2.5%;
 }
 
 
