--- a/src/Forms/SearchForm.css
+++ b/src/Forms/SearchForm.css
@@ -9,12 +9,59 @@
 }
 
 .inputDiv{
-    border: solid white 0.15rem;
+    display: flex;
+    flex-direction: column;
 }
 
-button{
-    margin: 2.5%;
-}
+.searchInput { 
+    background: black; 
+    border: 1px solid white; 
+    border-radius: 5px; 
+    box-shadow: 0 0 5px 3px red; 
+    color: white; 
+    outline: none;
+    margin: 5.0%;
+    height: 12%;
+    width: 80%;
+  }
 
-
-
+  .searchBtn {
+    align-items: center;
+    background-image: linear-gradient(144deg,red, white 50%,red);
+    border: 0;
+    border-radius: 8px;
+    color: white;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    justify-content: center;
+    max-width: 70%;
+    min-width: 15rem;
+    padding: 3px;
+    cursor: crosshair;
+  }
+  
+  .searchBtn:active,
+  .searchBtn:hover {
+    outline: 0;
+    color: black;
+    
+  }
+  
+  .searchBtn span {
+    background-color: black;
+    border-radius: 2rem;
+    width: 100%;
+    height: 100%;
+    transition: 300ms;
+  }
+  
+  .searchBtn:hover span {
+    background: none;
+  }
+  
+  @media (min-width: 6.5rem) {
+    .searchBtn {
+      font-size: 1.5rem;
+      min-width: 6.5rem;
+    }
+  }
