--- a/src/Forms/SearchForm.css
+++ b/src/Forms/SearchForm.css
@@ -4,7 +4,7 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    border: solid blue 0.25rem;
+    /* border: solid blue 0.25rem; */
     height: 100%;
 }
 
