--- a/src/Controls/Controls.css
+++ b/src/Controls/Controls.css
@@ -2,13 +2,14 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    border: solid green 0.25rem;
+    height: 100%;
+    border: solid red 0.25rem;
 }
 
 .filterDiv{
-    width: 70%;
+    width: 100%;
 }
 
 .searchDiv {
-    width: 30%;
+    width: 35%;
 }
