--- a/src/Pokemon/Pokemon.css
+++ b/src/Pokemon/Pokemon.css
@@ -12,5 +12,5 @@ img{
     padding: 0.5%;
     height: 100%;
     width: 100%;
-    border: solid white 0.25rem;
+    border: solid #D3D0CB 0.25rem;
 }
