--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 html{
-  color: white;
-  background-color: rgb(41, 41, 41);
+  color: #D3D0CB;
+  background-color: #1E2019;
+  height: 100%;
+  width: 100%;
 }
