--- a/src/Controls/Controls.css
+++ b/src/Controls/Controls.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     width: 100%;
     height: 100%;
-    border: solid red 0.25rem;
+    /* border: solid white 0.25rem; */
 }
 
 .filterDiv{
