--- a/src/Forms/SearchForm.css
+++ b/src/Forms/SearchForm.css
@@ -14,8 +14,8 @@
 }
 
 .searchInput { 
-    background: black; 
-    border: 1px solid white; 
+    background: #393E41; 
+    border: 1px solid black; 
     border-radius: 5px; 
     box-shadow: 0 0 5px 3px red; 
     color: white; 
@@ -30,7 +30,7 @@
     background-image: linear-gradient(144deg,red, white 50%,red);
     border: 0;
     border-radius: 8px;
-    color: white;
+    color: #D3D0CB;
     display: flex;
     font-family: Phantomsans, sans-serif;
     justify-content: center;
@@ -48,7 +48,7 @@
   }
   
   .searchBtn span {
-    background-color: black;
+    background-color: #393E41;
     border-radius: 2rem;
     width: 100%;
     height: 100%;
