refactored sort into individual component, remove span dropdown arrows, tweaked mobile responsive styling

--- a/src/Controls/Controls.css
+++ b/src/Controls/Controls.css
@@ -7,9 +7,15 @@
 }
 
 .filterDiv{
+    display: flex;
+    flex-direction: row;
     width: 100%;
 }
 
-.searchDiv {
+.filterForm {
     width: 35%;
+}
+
+.searchDiv {
+    width: 40%;
 }
