--- a/src/Forms/SortForm.css
+++ b/src/Forms/SortForm.css
@@ -1,14 +1,16 @@
-.filterForm {
+.sortSection {
     display: flex;
     flex-direction: row;
-    text-align: center;
-    /* align-items: center; */
-    width: 100%;
-    height: 100%;
-    /* border: solid red 0.25rem; */
+    justify-content: center;
 }
 
-.sortType {
+.sortOrder {
+    display: flex;
+    flex-direction: column;
+    margin: 5%;
+}
+
+.sortStat {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -16,26 +18,17 @@
     margin: 5%;
 }
 
-.sortType select {
-    color: #D3D0CB;
+.sortStat select {
+    color: white;
     background-color: #393E41;
     box-shadow: 0 0 5px 3px red;
     text-align: center;
     height: 2rem;
-    width: auto;
+    width: 7rem;
     -webkit-appearance: none;
 }
 
-.sortType select:hover {
+.sortStat select:hover {
     color: black;
     background-color: #D3D0CB;
 }
-
-
-
-/* .pageBtn {
-    max-height: 3rem;
-    max-width: 5rem;
-    margin: 5%;
-} */
-
